# llm-agent-mcp

./: README.md  pyproject.toml
app/: mcp_server.py  streamlit_app.py
app/agents/: weather_agent.py
app/prompts/: system_prompt.py
app/schemas/: location_search_schema.py  weather_data_schema.py
app/services/: llm_service.py  settings.py
app/tools/: location_search_tool.py  weather_data_tool.py
app/ui/: weather_ui.py
